# financial-research

./: .gitignore  README.md  prompt-daily-radar-v2.md  prompt-investment-discipline-execution.md  prompt-investment-discipline-validation.md  prompt.md
backend/: .env.example  Makefile  agent.py  alembic.ini  pyproject.toml  requirements.txt  zbpack.json
backend/alembic/: env.py
backend/backtest-results/: README.md
backend/eval-results/: 20260319-baseline.json
backend/scripts/: analyze_confidence_breakdown.py  backfill_daily_radar_symbol_names.py  backtest_win_rate.py  daily_radar_calibration.py  daily_radar_forward_validation.py  daily_radar_rule_ablation.py  eval_llm_output.py
backend/tests/: test_analysis_cache.py  test_api.py  test_backend_architecture_boundaries.py  test_backtest_win_rate.py  test_clock.py  test_compatibility_deprecation_audit.py  test_confidence_scorer.py  test_context_generator.py  test_daily_radar_api.py  test_daily_radar_api_contract.py  test_daily_radar_background_context.py  test_daily_radar_calibration.py  test_daily_radar_cooldown.py  test_daily_radar_explanations.py  test_daily_radar_forward_validation.py  test_daily_radar_market_context.py  test_daily_radar_name_backfill.py  test_daily_radar_prefilter.py  test_daily_radar_raw_data.py  test_daily_radar_relative_strength.py  test_daily_radar_repository.py  test_daily_radar_rule_governance.py  test_daily_radar_scoring.py  test_daily_radar_service.py  test_daily_radar_types.py  test_daily_radar_universe.py  test_db_models.py  test_decision_context_persistence.py  test_fetch_raw_data.py  (+41 more)
(+301 files in other folders)
