[project]
name = "ai-stock-sentinel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "yfinance>=0.2.54",
    "python-dotenv>=1.0.1",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "langgraph>=0.2.0",
    "PyJWT>=2.0",
    "google-auth>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13.0",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
